# argus

./: .gitignore  pyproject.toml
argus/agents/: __init__.py  base.py  recon.py
argus/cli/: app.py
argus/core/: event_bus.py  scheduler.py
argus/planner/: planner.py  tasks.py
cli/: app.py
core/: mission.py
docs/: 00_Vision.md
tests/: test_event_bus.py
