[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "argus"
version = "0.1.0"
description = "Autonomous Offensive Security Platform"
requires-python = ">=3.11"

dependencies = [
    "typer>=0.16",
    "rich>=14.0",
    "loguru>=0.7",
    "networkx>=3.5",
    "pydantic>=2.8"
]

[project.scripts]
argus = "argus.cli.app:app"

[tool.setuptools]
packages = ["argus"]
